--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "1.45.0",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "swiper": "7.4.1"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
