Added animated images

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,16 +70,7 @@
         }
       }
     ],
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "ts": "never",
-        "tsx": "never",
-        "js": "never",
-        "jsx": "never"
-      }
-    ],
+    "import/extensions": "off",
     "import/no-extraneous-dependencies": [
       "error",
       {
