--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "clsx": "1.1.1",
+    "i": "0.3.7",
     "next": "12.0.7",
     "next-images": "1.8.4",
     "normalize.css": "8.0.1",
+    "npm": "8.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "9.0.0-beta.5",
     "sass": "1.45.0",
     "styled-components": "5.3.3",
     "swiper": "7.4.1"
