--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "clsx": "1.1.1",
+    "framer-motion": "6.2.1",
     "i": "0.3.7",
     "next": "12.0.7",
     "next-images": "1.8.4",
