--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "0.24.0",
+    "babel-plugin-superjson-next": "^0.4.3",
     "clsx": "1.1.1",
     "framer-motion": "6.2.1",
     "humps": "2.0.1",
@@ -19,16 +20,19 @@
     "npm": "8.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.6",
+    "react-infinite-scroll-hook": "4.0.3",
+    "react-query": "3.34.19",
     "react-responsive": "9.0.0-beta.5",
     "sass": "1.45.0",
     "styled-components": "5.3.3",
+    "superjson": "^1.8.1",
     "swiper": "7.4.1"
   },
   "devDependencies": {
     "@types/humps": "^2.0.1",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.14",
     "@types/styled-components": "5.1.17",
     "@typescript-eslint/eslint-plugin": "5.6.0",
     "@typescript-eslint/parser": "5.6.0",
