--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "framer-motion": "6.2.1",
     "humps": "2.0.1",
     "i": "0.3.7",
+    "i18next": "^21.8.10",
+    "i18next-browser-languagedetector": "^6.1.4",
     "next": "12.0.7",
     "next-images": "1.8.4",
     "normalize.css": "8.0.1",
     "npm": "8.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.17.2",
     "react-infinite-scroll-hook": "4.0.3",
     "react-query": "3.34.19",
     "react-responsive": "9.0.0-beta.5",
