--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-images": "1.8.4",
     "normalize.css": "8.0.1",
     "npm": "8.3.0",
+    "plaiceholder": "^2.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.17.2",
